syntax = "proto3";

package auth.v1;
option go_package = "github.com/gaiaos-io/auth-service/proto/v1;authpb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ============================================================================
// AuthService — Public API
// ============================================================================

service AuthService {
  // ─────────────────────────────────
  // Identity
  // ─────────────────────────────────
  rpc GetMe(GetMeRequest) returns (AccountResponse);

  // ─────────────────────────────────
  // Authentication
  // ─────────────────────────────────

  // Email-password
  rpc EmailPasswordRegister(EmailPasswordRegisterRequest) returns (AuthResponse);
  rpc EmailPasswordLogin(EmailPasswordLoginRequest) returns (AuthResponse);

  // OAuth
  rpc StartOAuthLogin(StartOAuthRequest) returns (StartOAuthResponse);
  rpc FinishOAuthLogin(FinishOAuthRequest) returns (AuthResponse);

  // ─────────────────────────────────
  // Step-Up Authentication
  // ─────────────────────────────────

  // Email-password
  rpc EmailPasswordReauthenticate(EmailPasswordReauthenticateRequest) returns (ReauthenticateResponse);

  // OAuth
  rpc StartOAuthReauthenticate(StartOAuthRequest) returns (StartOAuthResponse);
  rpc FinishOAuthReauthenticate(FinishOAuthRequest) returns (ReauthenticateResponse);

  // ─────────────────────────────────
  // Session & Token Management
  // ─────────────────────────────────
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc RevokeSession(RevokeSessionRequest) returns (google.protobuf.Empty);
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);

  // ─────────────────────────────────
  // Credentials & Linking
  // ─────────────────────────────────

  // Password lifecycle
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (google.protobuf.Empty);
  rpc ConfirmPasswordReset(ConfirmPasswordResetRequest) returns (google.protobuf.Empty);

  // Email-password linking
  rpc EmailPasswordLink(EmailPasswordLinkRequest) returns (google.protobuf.Empty);

  // OAuth linking
  rpc StartOAuthLink(StartOAuthRequest) returns (StartOAuthResponse);
  rpc FinishOAuthLink(FinishOAuthRequest) returns (google.protobuf.Empty);
  rpc UnlinkOAuth(UnlinkOAuthRequest) returns (google.protobuf.Empty);

  // ─────────────────────────────────
  // Account Metadata & Verification
  // ─────────────────────────────────
  rpc RequestContactEmailUpdate(RequestContactEmailUpdateRequest) returns (google.protobuf.Empty);
  rpc VerifyEmail(VerifyEmailRequest) returns (google.protobuf.Empty);

  // ─────────────────────────────────
  // Account State & Lifecycle
  // ─────────────────────────────────
  rpc DisableAccount(DisableAccountRequest) returns (google.protobuf.Empty);
  rpc ReactivateAccount(ReactivateAccountRequest) returns (google.protobuf.Empty);

  rpc RequestAccountDeletion(RequestAccountDeletionRequest) returns (google.protobuf.Empty);
  rpc CancelAccountDeletion(CancelAccountDeletionRequest) returns (google.protobuf.Empty);

  // ─────────────────────────────────
  // Token Introspection
  // ─────────────────────────────────
  rpc IntrospectToken(IntrospectTokenRequest) returns (IntrospectTokenResponse);
}

// ============================================================================
// Enums
// ============================================================================

enum OAuthProvider {
  OAUTH_PROVIDER_UNSPECIFIED = 0;
  GOOGLE = 1;
  GITHUB = 2;
}

enum OAuthIntent {
  OAUTH_INTENT_UNSPECIFIED = 0;
  LOGIN = 1;
  LINK = 2;
  REAUTHENTICATE = 3;
}

enum AccountStatus {
  account_STATUS_UNSPECIFIED = 0;
  UNVERIFIED = 1;
  ACTIVE = 1;
  DISABLED = 2;
}

enum AccountRole {
  account_ROLE_UNSPECIFIED = 0;
  ADMIN = 1;
  CITIZEN = 2;
  RESEARCHER = 3;
  RANGER = 4;
}

// ============================================================================
// Common / Identity
// ============================================================================

message GetMeRequest {}

message AccountResponse {
  string account_id = 1;
  AccountStatus account_status = 2;
  repeated AccountRole account_roles = 3;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  AccountResponse account = 3;
}

// ============================================================================
// Email-Password Authentication
// ============================================================================

message EmailPasswordLoginRequest {
  string email = 1;
  string password = 2;
}

message EmailPasswordRegisterRequest {
  string email = 1;
  string password = 2;
}

message EmailPasswordLinkRequest {
  string email = 1;
  string password = 2;
}

message EmailPasswordReauthenticateRequest {
  string password = 1;
}

// ============================================================================
// OAuth
// ============================================================================

message StartOAuthRequest {
  OAuthProvider provider = 1;
  OAuthIntent intent = 2;
  string redirect_uri = 3;
}

message StartOAuthResponse {
  string authorization_url = 1;
}

message FinishOAuthRequest {
  OAuthProvider provider = 1;
  string code = 2;
  string state = 3;
}

message UnlinkOAuthRequest {
  OAuthProvider provider = 1;
}

// ============================================================================
// Step-Up Authentication
// ============================================================================

message ReauthenticateResponse {
  string reauth_token = 1;
}

// ============================================================================
// Sessions
// ============================================================================

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  bool all_sessions = 1;
}

message ListSessionsRequest {}

message ListSessionsResponse {
  repeated Session sessions = 1;
}

message Session {
  string session_id = 1;
  string device_name = 2;
  string ip_address = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp last_used_at = 5;
}

message RevokeSessionRequest {
  string session_id = 1;
}

// ============================================================================
// Account Management
// ============================================================================

message ChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message ConfirmPasswordResetRequest {
  string reset_code = 1;
  string new_password = 2;
}

message RequestContactEmailUpdateRequest {
  string new_email = 1;
}

// ============================================================================
// Account Lifecycle
// ============================================================================

message DisableAccountRequest {
  string account_id = 1;
  string reason = 2;
}

message ReactivateAccountRequest {
  string account_id = 1;
  string reason = 2;
}

message RequestAccountDeletionRequest {
  string reauth_token = 1;
}

message CancelAccountDeletionRequest {
  string cancel_token = 1;
  string reauth_token = 2;
}

// ============================================================================
// Verification
// ============================================================================

message VerifyEmailRequest {
  string token = 1;
}

// ============================================================================
// Token Introspection
// ============================================================================

message IntrospectTokenRequest {
  string token = 1;
}

message IntrospectTokenResponse {
  bool active = 1;
  AccountResponse account = 2;
}

